# Learning-AWS

./: .gitignore  README.md
.github/: CODEOWNERS
api/sts/: README.md  main.tf
s3/bash_scripts/: create_bucket.sh  delete_objects.sh  destory_bucket.sh  generate_random_objects.sh  get_latest_bucket.sh  list_buckets.sh  list_objects.sh  put_object.sh
s3/cloudformation/: delete-stack.sh  deploy.sh  template.yaml
s3/cors/: README.md  bucket-policy.json  bucket-policy2.json  cors.json  index.html
s3/python/: README.md  main.py  pyproject.toml
s3/ruby/: s3.rb
s3/terraform/: main.tf
s3/terraform/module/: bucket.tf  variables.tf
vpc/basics/: create_vpc.sh  delete_vpc.sh
