[project]
name = "learning-aws"
version = "0.1.0"
description = "Learning AWS with Python and Boto3"
authors = [
    {name = "Guy Compton",email = "comptonguyjr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.39.12,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
